Contact page name misalignment on desktop fixed.

--- a/app/scss/views/_contact.scss
+++ b/app/scss/views/_contact.scss
@@ -58,7 +58,7 @@
 			right: 3.3%;
 		}
 		@media (min-width: 1700px){
-			// right: 0%;
+			right: 0%;
 		}
 	}
 
